# sadgpt

./: .dockerignore  .gitignore  .wakatime-project  Cargo.toml  Dockerfile  README.md  fly.toml  index.html  mprocs.yaml  package.json  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml  netlify.yml
src/: app.rs  lib.rs  main.rs
