[package]
name = "sadgpt"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.2.4", default-features = false, features = [
  "serde",
  "csr",
] }
leptos_meta = { version = "0.2.4", features = ["csr"] }
leptos_router = { version = "0.2.4", features = ["csr"] }
gloo-net = { version = "0.2", features = ["http"] }
log = "0.4"
cfg-if = "1.0"

# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}

# manually added
rand = { version = "0.8.5" }
serde = { version = "1.0.158", features = ["derive"] }
getrandom = { version = "0.2.8", features = ["js"] }
uuid = { version = "1.3.0", features = ["js", "v4"] }
leptos-icons = { git = "https://github.com/Carlosted/leptos-icons.git", features = ["TbSend"], rev = "6f5d9d" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
